=== 1.0 / ??

* API change
  * Net::HTTP::Pipeline#pipeline requires an Array of Net::HTTPRequests now.

* Minor enhancements
  * Check for HTTP/1.1 and persistent connections before attempting
    pipelining
  * Added Net::HTTP#persistent= to avoid pipelining-capability check.

=== 0.1 / 2010-12-07

* Minor enhancement
  * Add 1.8.7 support

=== 0.0 / 2010-12-07

* Major enhancement

  * Birthday!
